force-app/main/default/objects/Custom_Campaign__c/Custom_Campaign__c.object-meta.xml
<CustomObject>
    <label>Custom Campaign</label>
    <nameField>
        <label>Custom Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>