force-app/main/default/objects/Custom_Campaign__c/fields/Batch_Process_Description__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Description__c</fullName>
    <label>Batch Process Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>