force-app/main/default/objects/Custom_Campaign__c/fields/Total_Leads_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads_Processed__c</fullName>
    <label>Total Leads Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>